edit activity page

--- a/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
+++ b/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
@@ -870,6 +870,6 @@
         <image name="Unchecked box" width="36" height="36"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ldf-gq-QLX"/>
+        <segue reference="fua-He-BmG"/>
     </inferredMetricsTieBreakers>
 </document>
